--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,9 +4,8 @@
   --cor1: #6f4e37; /*Marrom Café (cor primária)*/
   --cor2: #d9b382; /*Bege Claro (cor secundária)*/
   --cor3: #3e2723; /*Marrom Escuro (cor Acento)*/
-  --cor4: white;   /*Branco (cor de texto)*/
-  --cor5: black;   /*Preto (cor de texto)*/ 
-
+  --cor4: white; /*Branco (cor de texto)*/
+  --cor5: black; /*Preto (cor de texto)*/
 }
 
 * {
@@ -17,12 +16,58 @@
 }
 
 body {
-  background-color: rgb(122, 122, 122);
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100%;
+  background-image:  ;
 }
 
 header {
-  background-color: darkgray;
+  margin: 0;
+  padding: 0;
+  height: 12vh;
+  /* width: 100%; */
+  background-color: var(--cor3);
+}
+
+main {
+  min-width: 300px;
+  max-width: 1000px;
+  margin: auto;
+  padding: 5.7em;
+  background-color: white;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.455);
+  margin-bottom: 30px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+/* main {
+  padding: 0;
+  width: 100%;
+  max-width: 738px;
+  height: 88vh;
+  box-sizing: border-box;
   border: 2px solid black;
+  margin: 0 auto;
+}  */
+
+#contact {
+  text-align: center;
+  margin-top: 10em;
+  color: white;
+}
+#contact h2 {
+  font-size: 2em;
+  margin-bottom: 1em;
+  position: relative;
+  top: -2em;
+  left: 10em;
+}
+#contact h2 p {
+  margin-bottom: 1em;
+  position: relative;
+  left: 10em;
 }
 /* arrumando o menu cabeçalho */
 #menu0 {
@@ -34,7 +79,6 @@ header {
   align-items: center;
   color: var(--cor4);
 }
-
 
 #menu0 ul {
   display: flex;
@@ -63,9 +107,4 @@ header {
   position: relative;
   top: -10.5em;
   margin-left: 28em;
-
-}
-
-main {
-  border: 2px solid black;
 }
