--- a/CSS/contato.css
+++ b/CSS/contato.css
@@ -1,14 +1,65 @@
 @charset 'utf-8';
 
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans:wght@300;400;600&display=swap');
+
+:root {
+   --cor1: #6f4e37; /*Marrom Café (cor primária)*/
+   --cor2: #d9b382; /*Bege Claro (cor secundária)*/
+   --cor3: #3e2723; /*Marrom Escuro (cor Acento)*/
+   --cor4: white; /*Branco (cor de texto)*/
+   --cor5: black; /*Preto (cor de texto)*/
+ }
+
+ header {
+    background-color: var(--cor1);
+    padding: 10px;
+
+    & nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px;
+
+      & img {
+        height: 70px;
+      }
+
+      & ul {
+        display: flex;
+        list-style: none;
+
+        & li {
+          margin: 0 10px;
+        }
+
+        & a {
+          text-decoration: none;
+          color: var(--cor4);
+          font-family: 'Open Sans', sans-serif;
+          font-weight: bold;
+
+          &:hover {
+            color: var(--cor2);
+          }
+        }
+      }
+    }
+ }
+
+ main {
+   padding: 10px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   align-content: center;
+   padding: 20px;
+   font-family: 'Merriweather';
+ }
+
 section {
    position: relative;
-
-   &  {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-   }
+   bottom: 10px;
+   width: 350px;
 
    & h1 {
     text-align: center;
@@ -21,11 +72,50 @@ section {
     align-items: center;
     justify-content: center;
     width: 100%;
-    max-width: 500px;
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: #f9f9f9;
+    background-color: var(--cor2);
    }
-}
+
+    & label {
+      font-weight: bold;
+      color: var(--cor1);
+    }
+
+    & input {
+      border-radius: 5px;
+      border: 2px solid var(--cor1);
+      outline: unset;
+    }
+
+    & textarea {
+      outline: unset;
+      border: 2px solid var(--cor1);
+    }
+
+    & button {
+      margin-top: 5px;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      background-color: var(--cor1);
+      color: var(--cor4);
+      font-weight: bold;
+      cursor: pointer;
+    }
+   }
+
+footer {
+  background-color: var(--cor3);
+  font-weight: bold;
+  font-size: 1em;
+  box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.5);
+  color: white;
+  text-shadow: black 0.1em 0.1em 0.2em;
+  text-align: center;
+  padding: 5px;
+  bottom: 0;
+  width: 100%;
+ }
